; ModuleID = '/home/carl/AnghaBench/vlc/src/player/extr_title.c_vlc_player_title_list_GetAt.c'
source_filename = "/home/carl/AnghaBench/vlc/src/player/extr_title.c_vlc_player_title_list_GetAt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_player_title = type { i32 }
%struct.vlc_player_title_list = type { i64, %struct.vlc_player_title* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.vlc_player_title* @vlc_player_title_list_GetAt(%struct.vlc_player_title_list* %0, i64 %1) #0 {
  %3 = alloca %struct.vlc_player_title_list*, align 8
  %4 = alloca i64, align 8
  store %struct.vlc_player_title_list* %0, %struct.vlc_player_title_list** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %4, align 8
  %6 = load %struct.vlc_player_title_list*, %struct.vlc_player_title_list** %3, align 8
  %7 = getelementptr inbounds %struct.vlc_player_title_list, %struct.vlc_player_title_list* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = icmp ult i64 %5, %8
  %10 = zext i1 %9 to i32
  %11 = call i32 @assert(i32 %10)
  %12 = load %struct.vlc_player_title_list*, %struct.vlc_player_title_list** %3, align 8
  %13 = getelementptr inbounds %struct.vlc_player_title_list, %struct.vlc_player_title_list* %12, i32 0, i32 1
  %14 = load %struct.vlc_player_title*, %struct.vlc_player_title** %13, align 8
  %15 = load i64, i64* %4, align 8
  %16 = getelementptr inbounds %struct.vlc_player_title, %struct.vlc_player_title* %14, i64 %15
  ret %struct.vlc_player_title* %16
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
